--- a/client/src/StudentDashboard/overlays/WarmupOverlay/styles.css
+++ b/client/src/StudentDashboard/overlays/WarmupOverlay/styles.css
@@ -4,7 +4,7 @@
 	right: 0;
 	left: 0;
 	bottom: 0;
-	background-color: #000000a1;
+	background-color: rgba(0, 0, 0, 0.7);
 	display: flex;
 	flex-flow: column;
 	justify-content: center;
