--- a/client/src/StudentDashboard/overlays/WarmupOverlay/styles.css
+++ b/client/src/StudentDashboard/overlays/WarmupOverlay/styles.css
@@ -27,3 +27,31 @@
 	margin-top: 20px;
 	margin-bottom: 40px;
 }
+
+.flashIt {
+	-webkit-animation: flash linear 2.3s infinite;
+	animation: flash linear 2.3s infinite;
+}
+
+@-webkit-keyframes flash {
+	0% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.55;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+@keyframes flash {
+	0% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.55;
+	}
+	100% {
+		opacity: 1;
+	}
+}
