--- a/client/src/StudentDashboard/components/NavigationBar/styles.css
+++ b/client/src/StudentDashboard/components/NavigationBar/styles.css
@@ -53,8 +53,11 @@
 	z-index: 999999;
 	font-weight: bold;
 	font-style: italic;
-	font-size: 17px;
+	font-size: 15px;
 	opacity: 0.7;
+	position: relative;
+	right: 50px;
+	top: 1px;
 }
 
 .centerDisplayContainer {
