--- a/client/src/StudentDashboard/components/ProgressBarWithStages/styles.css
+++ b/client/src/StudentDashboard/components/ProgressBarWithStages/styles.css
@@ -44,3 +44,15 @@
 	height: 5px;
 	opacity: 0.8;
 }
+
+@media screen and (max-width: 700px) {
+	.navProgress {
+		display: none;
+	}
+}
+
+@media screen and (max-height: 600px) {
+	.progress {
+		display: none;
+	}
+}
