--- a/app/views/homepage/partials/_footer.html.erb
+++ b/app/views/homepage/partials/_footer.html.erb
@@ -4,7 +4,7 @@
       <nav class="footer--nav">
         <a class="footer--nav--link footer--nav--link---terms-privacy" href="/privacy">
           Terms &amp; Privacy </a>
-        <a class="footer--nav--link" href="/student_dashboard/#/story/demo">
+        <a class="footer--nav--link" href="/fp-demo">
           Try Demo
         </a>
         <a class="footer--nav--link" href="mailto:team@readupnow.com">
