spelling letter box seems good

--- a/client/src/StudentDashboard/components/BackArrowButton/styles.css
+++ b/client/src/StudentDashboard/components/BackArrowButton/styles.css
@@ -37,6 +37,12 @@
 	opacity: 0.8;
 }
 
+.arrowButtonInlineTitle {
+	position: relative;
+	top: 18px;
+	left: 28px;
+}
+
 .disabledButtonContainer {
 	width: 100%;
 	height: 100%;
