--- a/client/src/StudentDashboard/components/SpellingLetterBox/styles.css
+++ b/client/src/StudentDashboard/components/SpellingLetterBox/styles.css
@@ -1,5 +1,6 @@
 .spellingLetterBox {
 	width: 950px;
+	min-width: 950px;
 	background-color: white;
 	border-radius: 15px;
 	margin: 0 auto;
@@ -27,7 +28,7 @@
 
 .letter {
 	display: inline-block;
-	font-size: 50px;
+	font-size: 58px;
 	padding: 0px 13px;
 	font-family: "Comic Neue Angular";
 	-webkit-touch-callout: none; /* iOS Safari */
