--- a/client/src/StudentDashboard/components/SpellingTextField/styles.css
+++ b/client/src/StudentDashboard/components/SpellingTextField/styles.css
@@ -1,5 +1,6 @@
 .spellingContainer {
-    margin-top: -26vh;
+    /*    margin-top: -11vh;
+*/
 }
 
 .spellingField {
@@ -7,7 +8,8 @@
     height: 92px;
     font-size: 48px;
     text-align: center;
-    margin-top: 50px;
+    /*    margin-top: 30px;
+*/
     font-family: "Comic Neue Angular";
 }
 
