--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -69,6 +69,8 @@ body {
 
 .doubleButtonContainer {
 	display: flex;
+	margin: 0 auto;
+
 	justify-content: space-evenly;
 	width: 360px;
 	position: relative;
