--- a/client/src/StudentDashboard/components/SpellingTextField/styles.css
+++ b/client/src/StudentDashboard/components/SpellingTextField/styles.css
@@ -7,6 +7,7 @@
     width: 368px;
     height: 92px;
     font-size: 48px;
+    margin: 0 auto;
     text-align: center;
     /*    margin-top: 30px;
 */
