progress bar resizing

--- a/client/src/StudentDashboard/components/ProgressBarWithStages/styles.css
+++ b/client/src/StudentDashboard/components/ProgressBarWithStages/styles.css
@@ -27,8 +27,12 @@
 }
 
 .navProgress {
-	width: 380px;
+	/*	width: 380px;
 	min-width: 235px;
+*/
+
+	min-width: 235px;
+	width: 35%;
 	position: relative;
 	z-index: 2;
 	top: -15px;
