basic functionality works but need to get rid of defined comp saga

--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -55,8 +55,13 @@ body {
 
 .leftButtonContainer {
 	min-width: 200px;
-	/*width: 200px;
-	height: 70px;*/
+	margin: 30px;
+}
+
+.compLeftButtonContainer {
+	position: relative;
+	top: 20px;
+	min-width: 200px;
 	margin: 30px;
 }
 
