--- a/client/src/StudentDashboard/overlays/FlashNoticeOverlay/styles.css
+++ b/client/src/StudentDashboard/overlays/FlashNoticeOverlay/styles.css
@@ -20,6 +20,15 @@
 	font-family: "Proximanova Semibold";
 	position: relative;
 	top: 30px;
+
+	/* unselectable: https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting-using-css*/
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 .large {
