--- a/client/src/StudentDashboard/overlays/FlashNoticeOverlay/styles.css
+++ b/client/src/StudentDashboard/overlays/FlashNoticeOverlay/styles.css
@@ -15,6 +15,10 @@
 	text-align: center;
 }
 
+.countdownWrapper {
+	background-color: rgba(0, 0, 0, 0.4);
+}
+
 .introTitle {
 	font-size: 4.75em;
 	font-family: "Proximanova Semibold";
