--- a/client/src/StudentDashboard/components/SpellingTextField/styles.css
+++ b/client/src/StudentDashboard/components/SpellingTextField/styles.css
@@ -1,13 +1,20 @@
 .spellingContainer {
     /*    margin-top: -11vh;
 */
+
+    height: 192px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    left: 90px;
 }
 
 .spellingField {
     width: 368px;
     height: 92px;
     font-size: 48px;
-    margin: 0 auto;
+    /*    margin: 0 auto;
+*/
     text-align: center;
     /*    margin-top: 30px;
 */
