--- a/client/src/sharedComponents/LinkInfo/styles.css
+++ b/client/src/sharedComponents/LinkInfo/styles.css
@@ -7,7 +7,7 @@
 .whiteBack {
 	color: white;
 	font-size: 17px;
-	font-family: "proximanova semibold";
+	font-family: "proximanova";
 	position: relative;
 	top: 34px;
 	left: 20px;
