--- a/client/src/StudentDashboard/styles.css
+++ b/client/src/StudentDashboard/styles.css
@@ -43,8 +43,7 @@ body {
 	flex: 1;
 	background-color: #0c1f2c;
 	z-index: 1;
-	justify-content: center;
-	align-items: center;
+	justify-content: space-around;
 	overflow-y: hidden;
 	flex-flow: column;
 }
