--- a/client/src/StudentDashboard/components/SpellingTextField/styles.css
+++ b/client/src/StudentDashboard/components/SpellingTextField/styles.css
@@ -9,9 +9,10 @@
 .spellingField {
     width: 368px;
     height: 92px;
-    font-size: 48px;
-    /*    margin: 0 auto;
-*/
+
+    font-size: 63px;
+    color: #323232;
+
     text-align: center;
     /*    margin-top: 30px;
 */
