add black screen to grader help

--- a/client/src/StudentDashboard/components/SpellingTextField/styles.css
+++ b/client/src/StudentDashboard/components/SpellingTextField/styles.css
@@ -9,7 +9,8 @@
 .spellingField {
     width: 368px;
     height: 92px;
-    font-size: 48px;
+    font-size: 63px;
+    color: #232323;
     /*    margin: 0 auto;
 */
     text-align: center;
