--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -925,7 +925,7 @@ a.demo-button button#new-hero-button {
         </h1>
 
           <h4 id="sub-pitch">
-            ReadUp's trusted <span class="specialists"><a href='/reports/direct-sample?brand=<%= @brand[:code]%>'>reading specialists</a></span> give and score full F&amp;P and STEP assessments so teachers can spend less time testing and <span> more time teaching.</span>
+            ReadUp's trusted reading specialists give and score full F&amp;P and STEP assessments so teachers can spend less time testing and <span> more time teaching.</span>
            </h4>
       <a class="demo-button" href="/reports/direct-sample?brand=FP">
         <button class="primary-btn" id="new-hero-button" onclick="demoClicked()"> 
