--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -16,6 +16,7 @@
 
   body { 
     font-family: 'Proximanova', sans-serif;
+     -webkit-font-smoothing: antialiased;
   }
 
   a, a:hover, a:active, a:visited, a:focus {
