--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -924,7 +924,7 @@ a.demo-button button#new-hero-button {
     <div class="title">
       <div id="myTitleText" class="pure-u-1 pure-u-md-3-5">
 
-        <% @brand = {name: 'F&P and STEP', code: 'FP'}; @brand3 = {name: 'STEP', code: 'STEP'}; @brand2 = {name: 'F&P', code: 'FP'} 
+        <% @brand = {name: 'F&P', code: 'FP'}; @brand3 = {name: 'STEP', code: 'STEP'}; @brand2 = {name: 'F&P', code: 'FP'} 
 
         %>
 
@@ -933,7 +933,7 @@ a.demo-button button#new-hero-button {
         </h1>
 
           <h4 id="sub-pitch">
-            ReadUp's trusted reading specialists give and score full F&amp;P and STEP assessments so teachers can spend less time testing and <span> more time teaching.</span>
+            ReadUp's trusted reading specialists give and score full F&amp;P assessments so teachers can spend less time testing and <span> more time teaching.</span>
            </h4>
       <a class="demo-button" href="/reports/direct-sample?brand=FP">
         <button class="primary-btn" id="new-hero-button" onclick="demoClicked()"> 
