--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -2,11 +2,13 @@
 <html>
   <head>
 
-  <!-- Maybe be repeating this code from _headers.erb  -->
+  <!-- Maybe repeating this code from _headers.erb  -->
 <title>ReadUp | F&amp;P and STEP reading assessment online</title>
 <meta name="description" content="ReadUp's trusted reading specialists give and score a full Fountas and Pinnell or STEP assessment so teachers can focus less on testing and more on teaching.">
 <meta property="og:title" content="ReadUp | F&P and STEP reading assessment online">
 <meta property="og:description" content="ReadUp's trusted reading specialists give and score a full Fountas and Pinnell or STEP assessment so teachers can focus less on testing and more on teaching.">
+<meta property="og:image" content="https://www.readupnow.com/images/og-image.png" />
+
 
   <!-- END Maybe be repeating this code from _headers.erb  -->
 
